[package]
name = "yt-feeds-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
urlencoding = "2"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.12"           # Do kodowania/dekodowania protobuf
prost-types = "0.12"     # Typy pomocnicze
once_cell = "1.21.4"
tower-http = { version = "0.6.10", features = ["trace"] }
anyhow = "1.0.102"
bytes = "1"
async-stream = "0.3"
lazy_static = "1.4.0"

[build-dependencies]
prost-build = "0.12"     # Do kompilacji plików .proto
